@@ -653,6 +653,7 @@ wxMSW:
 - Fix clicking on togglable columns in wxDataViewCtrl (Laurent Poujoulat).
 - Fix expander in non left-most position in wxDataViewCtrl (Laurent Poujoulat).
 - Don't fail when using large paper sizes in print preview.
+- Fix wxRichMessageDialog return value for dialog with only "OK" button.
 
 wxOSX:
 
